# lang-explorer

./: .clangd  .gitignore  CITATION.cff  CMakeLists.txt  Cargo.toml  README.md
lang-explorer-python/: .dockerignore  .gitattributes  .gitignore  Dockerfile  README.md  generate_client.sh  main.py  pyproject.toml
lang-explorer-python/archive/: embeddings_100k_tacosched.csv  embeddings_10k_css.csv  embeddings_10k_tacoexpr.csv  embeddings_10k_tacosched.csv  embeddings_128_10_1000_tacosched.csv  embeddings_128_10_1000_tacosched_new.csv  embeddings_128_10_100_tacoexpr.csv  embeddings_128_10_100_tacoexpr_new.csv  embeddings_128_10_100_tacosched.csv  embeddings_128_10_100_tacosched_new.csv  embeddings_128_10_2500_tacosched.csv  embeddings_128_10_2500_tacosched_new.csv  embeddings_128_10_5000_karel.csv  embeddings_128_10_5000_tacosched.csv  embeddings_128_10_5000_tacosched_new.csv  embeddings_128_10_5000_tacosched_old.csv  embeddings_128_10_500_karel.csv  embeddings_128_10_500_tacosched.csv  embeddings_128_10_500_tacosched_new.csv  embeddings_128_10_750_tacosched.csv  embeddings_128_10_750_tacosched_new.csv  embeddings_128_20_100_tacosched.csv  embeddings_128_20_100_tacosched_new.csv  embeddings_25k_cssnew.csv  embeddings_25k_cssnew2.csv  embeddings_25k_tacoexpr.csv  embeddings_25k_tacoexpr_all.csv  embeddings_32_10_25000_css.csv  embeddings_32_10_25000_tacoexpr.csv  embeddings_32_10_25000_tacosched.csv  embeddings_64_10_25000_css.csv  embeddings_64_10_25000_tacoexpr.csv  embeddings_64_10_25000_tacosched.csv
lang-explorer-python/results/: embeddings_128_10000_css_gensim.csv  embeddings_128_10000_css_nopartials_gensim.csv  embeddings_128_10000_karel_nopartials_gensim.csv  embeddings_128_10000_tacoexpr_gensim.csv  embeddings_128_10000_tacoexpr_nopartials_gensim.csv  embeddings_128_10000_tacosched_gensim.csv  embeddings_128_10000_tacosched_nopartials_gensim.csv  embeddings_128_1000_tacosched_gensim.csv  embeddings_128_1000_tacosched_mxbai_embed_large.csv  embeddings_128_1000_tacosched_nomic_embed_text.csv  embeddings_128_1000_tacosched_snowflake_arctic_embed2.csv  embeddings_128_10_tacosched_gensim.csv  embeddings_128_10_tacosched_mxbai_embed_large.csv  embeddings_128_15000_css_gensim.csv  embeddings_128_15000_tacoexpr_gensim.csv  embeddings_128_15000_tacosched_gensim.csv  embeddings_128_5000_karel_gensim.csv  embeddings_128_5000_karel_nopartials_gensim.csv  embeddings_128_5000_tacosched_gensim.csv  embeddings_128_5000_tacosched_mxbai_embed_large.csv  embeddings_128_5000_tacosched_nomic_embed_text.csv  embeddings_128_5000_tacosched_snowflake_arctic_embed2.csv
lang-explorer-python/results/css/: .gitignore
lang-explorer-python/results/css/1/: experiments.json
lang-explorer-python/results/css/2/: experiments.json
lang-explorer-python/results/css/3/: experiments.json  options.json
lang-explorer-python/results/css/4/: experiments.json  options.json
lang-explorer-python/results/css/5/: experiments.json  options.json
lang-explorer-python/results/css/6/: experiments.json
lang-explorer-python/results/css/7/: experiments.json  grammar.bnf
lang-explorer-python/results/css/8/: experiments.json  options.json
lang-explorer-python/results/css/9/: experiments.json  options.json
lang-explorer-python/results/karel/: .gitignore
lang-explorer-python/results/karel/1/: experiments.json  options.json
lang-explorer-python/results/karel/2/: experiments.json  grammar.bnf
lang-explorer-python/results/karel/3/: experiments.json
lang-explorer-python/results/karel/4/: experiments.json
lang-explorer-python/results/karel/5/: experiments.json
lang-explorer-python/results/karel/6/: experiments.json  options.json
lang-explorer-python/results/karel/7/: experiments.json  options.json
lang-explorer-python/results/karel/8/: experiments.json
lang-explorer-python/results/tacoexpr/1/: experiments.json
lang-explorer-python/results/tacoexpr/2/: experiments.json  grammar.bnf
lang-explorer-python/results/tacoexpr/3/: experiments.json
lang-explorer-python/results/tacoexpr/4/: experiments.json
lang-explorer-python/results/tacoexpr/5/: experiments.json
lang-explorer-python/results/tacoexpr/6/: experiments.json
lang-explorer-python/results/tacosched/: .gitignore
lang-explorer-python/scripts/: generate_client.sh  generate_data.sh  generate_exp_parse.sh  generate_nn.sh  generate_nn_new.sh  generate_nn_old.sh  generate_similarity.sh  generate_viz.sh  join_presentation_diagrams.sh
lang-explorer-python/src/commands/: embeddings.py  experiment_processing.py  interact.py  interact2.py  nearest.py  nearest2.py  nearest3.py  similarity_correlation.py  tsne_animation.py  viz.py  viz2.py
lang-explorer-python/src/experiments/: chisq.py  doc2vec.ipynb  graph2vec.py  kron.py  simple_fractions.py  simple_model.py  simple_ray_model.py  simple_xor_model.py  word2vec.ipynb
lang-explorer-python/src/utils/: client.py  ray_init.py  strlen.py  torch_init.py
python/: pyproject.toml
python/src/experiments/: simple_fractions.py
python/src/utils/: ray_init.py
(+144 files in other folders)
