[package]
name = "lang-explorer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.82"
burn = { version = "0.17.1", features = ["autodiff", "cuda", "metrics", "ndarray", "network", "router", "train", "tui"] }
cc = "1.1.20"
clap = { version = "4.5.17", features = ["derive"] }
dashmap = "6.1.0"
fasthash = "0.4.0"
hex = "0.4.3"
lalrpop-util = { version = "0.22.2", features = ["lexer"] }
libloading = "0.8.5"
mpi = "0.8.0"
num_cpus = "1.17.0"
rand = "0.8.5"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
sha2 = "0.10.9"
tokio = { version = "1.45.1", features = ["full"] }
tokio-stream = "0.1.17"
utoipa = "5.4.0"
warp = "0.3.7"

[build-dependencies]
lalrpop = "0.22.2"
