[package]
name = "lang-explorer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.82"
burn = { version = "0.18.0", features = ["autodiff", "cuda", "metrics", "ndarray", "network", "router", "train", "tui"] }
bytes = "1.10.1"
cc = "1.1.20"
clap = { version = "4.5.17", features = ["derive"] }
csv = "1.3.1"
dashmap = "6.1.0"
fasthash = "0.4.0"
futures = "0.3.31"
hex = "0.4.3"
lalrpop-util = { version = "0.22.2", features = ["lexer"] }
libloading = "0.8.5"
mpi = "0.8.0"
num_cpus = "1.17.0"
rand = "0.9.2"
rand_chacha = "0.9.0"
reqwest = { version = "0.12.23", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
sha2 = "0.10.9"
tokio = { version = "1.47.1", features = ["full"] }
utoipa = "5.4.0"
warp = { version = "0.4.2", features = ["server"] }

[build-dependencies]
lalrpop = "0.22.2"
