[project]
name = "lang-explorer-python"
version = "0.1.0"
description = "Python stuff for Lang-explorer"
authors = [
    {name = "Kendall Tauser",email = "kttpsy@gmail.com"}
]
readme = "README.md"
requires-python = "=3.12.9"
dependencies = [
    "ray[client,data,train] (>=2.46.0,<3.0.0)",
    "torch (>=2.7.0,<3.0.0)",
    "lightning (>=2.5.1.post0,<3.0.0)",
    "transformers (>=4.52.4,<5.0.0)",
    "gensim (>=4.3.3,<5.0.0)",
    "joblib (>=1.5.1,<2.0.0)",
    "argparse (>=1.4.0,<2.0.0)",
    "scikit-learn (>=1.7.0,<2.0.0)",
    "matplotlib (>=3.10.3,<4.0.0)",
    "scipy (==1.13.1)",
    "mplcursors (>=0.6,<0.7)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
