[project]
name = "lang-explorer-python"
version = "0.1.0"
description = "Python stuff for Lang-explorer"
authors = [
    {name = "Kendall Tauser",email = "kttpsy@gmail.com"}
]
readme = "README.md"
requires-python = "=3.9.22"
dependencies = [
    "ray[client] (>=2.46.0,<3.0.0)",
    "torch (>=2.7.0,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
